[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.12.1",
    "bedrock-agentcore>=1.4.3",
    "bedrock-agentcore-starter-toolkit>=0.3.2",
    "ddgs>=9.11.2",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.1",
    "gradio>=6.9.0",
    "jwt>=1.4.0",
    "langchain>=1.2.10",
    "langchain-aws>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-aws>=1.0.6",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
